At this point Add/Edit Customer dialog displays data from edited customer row but does not save anything

--- a/src/main/java/org/pantry/food/Main.fxml
+++ b/src/main/java/org/pantry/food/Main.fxml
@@ -17,7 +17,7 @@
             <MenuBar fx:id="mnuBar">
               <menus>
                 <Menu id="views" text="Views" />
-                <Menu mnemonicParsing="false" text="Help" />
+                <Menu id="help" mnemonicParsing="false" text="Help" />
               </menus>
             </MenuBar>
             <HBox fx:id="buttonBar" fillHeight="false">
