--- a/src/main/java/org/pantry/food/ui/dialog/AboutDialog.fxml
+++ b/src/main/java/org/pantry/food/ui/dialog/AboutDialog.fxml
@@ -1,23 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.DialogPane?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
 
-<DialogPane prefHeight="173.0" prefWidth="360.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1"
-	fx:controller="org.pantry.food.ui.dialog.AboutDialog">
-   <content>
-      <HBox fx:id="contentBox" prefHeight="100.0" prefWidth="200.0">
+<Pane prefHeight="167.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.pantry.food.ui.dialog.AboutDialog">
+   <children>
+      <HBox fx:id="contentBox">
          <children>
-            <Label fx:id="imageLabel" />
-            <VBox prefHeight="200.0" prefWidth="100.0" HBox.hgrow="ALWAYS">
+            <Label fx:id="imageLabel" minHeight="177.0" minWidth="130.0">
+               <HBox.margin>
+                  <Insets left="-10.0" right="10.0" top="-10.0" />
+               </HBox.margin>
+            </Label>
+            <VBox prefHeight="167.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
                <children>
-                  <Label fx:id="titleLabel" text="McFarland Community Food Pantry" />
+                  <Label fx:id="titleLabel" text="McFarland Community Food Pantry">
+                     <VBox.margin>
+                        <Insets bottom="10.0" top="10.0" />
+                     </VBox.margin>
+                  </Label>
                   <GridPane>
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -37,20 +45,9 @@
                         <Label text="See Pantry Staff" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                      </children>
                   </GridPane>
-                  <GridPane layoutX="10.0" layoutY="27.0">
-                     <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                     </columnConstraints>
-                     <rowConstraints>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                     </rowConstraints>
-                  </GridPane>
                </children>
             </VBox>
          </children>
       </HBox>
-   </content>
-</DialogPane>
+   </children>
+</Pane>
