--- a/src/main/java/org/pantry/food/ui/dialog/AddEditCustomerDialog.fxml
+++ b/src/main/java/org/pantry/food/ui/dialog/AddEditCustomerDialog.fxml
@@ -15,7 +15,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.pantry.food.ui.dialog.AddEditCustomerDialogController">
    <children>
-      <VBox prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <VBox prefHeight="300.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <GridPane hgap="20.0" prefHeight="371.0" prefWidth="600.0" vgap="10.0">
               <columnConstraints>
@@ -128,7 +128,23 @@
                   <Insets bottom="20.0" />
                </padding>
             </GridPane>
-            <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="200.0" styleClass="dialog-action-container">
+            <GridPane>
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="285.0" minWidth="10.0" prefWidth="113.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="490.5" minWidth="10.0" prefWidth="467.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <Label text="Comments" />
+                  <TextField id="comments" fx:id="commentsText" GridPane.columnIndex="1" />
+               </children>
+               <VBox.margin>
+                  <Insets bottom="20.0" />
+               </VBox.margin>
+            </GridPane>
+            <HBox alignment="CENTER_RIGHT" styleClass="dialog-action-container">
                <children>
                   <Button fx:id="saveBtn" defaultButton="true" mnemonicParsing="false" text="Save" />
                   <Button fx:id="cancelBtn" cancelButton="true" mnemonicParsing="false" text="Cancel">
