File watcher now triggers event when customers.csv is changed, causing the customers view to reload the data and refresh the view. Changed default dialog button color so it's not as aggressive.

--- a/src/main/resources/styles/global.css
+++ b/src/main/resources/styles/global.css
@@ -1,3 +1,7 @@
+.button:default {
+    -fx-base: derive(-fx-accent, 120%);
+}
+
 /* Make panel headings a little bigger to signify importance */
 .content-header {
 	-fx-font-size: 120%;
