--- a/src/main/java/org/pantry/food/Foods.fxml
+++ b/src/main/java/org/pantry/food/Foods.fxml
@@ -3,11 +3,11 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
 <AnchorPane xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.pantry.food.controller.FoodsController">
@@ -41,36 +41,38 @@
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding>
             </HBox>
-            <ScrollPane fitToHeight="true" fitToWidth="true">
-               <content>
-                  <AnchorPane>
-                     <children>
-                        <TableView fx:id="dataTable" focusTraversable="false" prefWidth="1400.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="0.0">
-                          <columns>
-                            <TableColumn id="foodId" editable="false" minWidth="-1.0" prefWidth="50.0" styleClass="numeric" text="Record" />
-                            <TableColumn id="entryDate" editable="false" minWidth="-1.0" prefWidth="91.0" styleClass="numeric" text="Entry Date" />
-                              <TableColumn id="pickNSave" editable="false" minWidth="-1.0" prefWidth="61.0" styleClass="numeric" text="Pick 'n' Save" />
-                              <TableColumn id="community" editable="false" maxWidth="77.5" minWidth="-1.0" prefWidth="59.0" styleClass="numeric" text="Community" />
-                              <TableColumn id="nonTefap" editable="false" minWidth="-1.0" prefWidth="68.0" styleClass="numeric" text="Non-TEFAC CAC" />
-                              <TableColumn id="tefap" editable="false" minWidth="-1.0" prefWidth="50.5" styleClass="numeric" text="TEFAP" />
-                              <TableColumn id="secondHarvest" editable="false" minWidth="-1.0" prefWidth="78.5" styleClass="numeric" text="2nd Harvest" />
-                              <TableColumn id="secondHarvestProduce" editable="false" minWidth="-1.0" prefWidth="131.0" styleClass="numeric" text="2nd Harvest Produce" />
-                              <TableColumn id="pantry" editable="false" minWidth="-1.0" prefWidth="105.5" styleClass="numeric" text="Pantry Purchase" />
-                              <TableColumn id="nonFood" editable="false" minWidth="-1.0" prefWidth="107.0" styleClass="numeric" text="Pantry Non-Food" />
-                              <TableColumn id="comment" editable="false" minWidth="-1.0" prefWidth="66.0" text="Comment" />
-                              <TableColumn id="nonFood" editable="false" minWidth="-1.0" prefWidth="64.5" styleClass="numeric" text="Non-Food" />
-                              <TableColumn id="milk" editable="false" minWidth="-1.0" prefWidth="37.0" styleClass="numeric" text="Milk" />
-                              <TableColumn id="produce" editable="false" minWidth="-1.0" prefWidth="102.0" styleClass="numeric" text="Pantry Produce" />
-                              <TableColumn id="donation" editable="false" minWidth="-1.0" prefWidth="67.0" text="Donation" />
-                              <TableColumn id="donorName" editable="false" minWidth="-1.0" prefWidth="54.5" text="Donor" />
-                              <TableColumn id="donorAddress" editable="false" minWidth="-1.0" prefWidth="61.5" text="Address" />
-                              <TableColumn id="donorEmail" editable="false" minWidth="-1.0" prefWidth="45.0" text="Email" />
-                          </columns>
-                        </TableView>
-                     </children>
-                  </AnchorPane>
-               </content>
-            </ScrollPane>
+            <StackPane prefWidth="500.0">
+               <children>
+                  <TableView fx:id="dataTable" focusTraversable="false">
+                    <columns>
+                      <TableColumn id="foodId" editable="false" minWidth="-1.0" prefWidth="50.0" styleClass="numeric" text="Record" />
+                      <TableColumn id="entryDate" editable="false" minWidth="-1.0" prefWidth="91.0" styleClass="numeric" text="Entry Date" />
+                        <TableColumn id="pickNSave" editable="false" minWidth="-1.0" prefWidth="80.5" styleClass="numeric" text="Pick 'n' Save" />
+                        <TableColumn id="community" editable="false" maxWidth="77.5" minWidth="-1.0" prefWidth="73.0" styleClass="numeric" text="Community" />
+                        <TableColumn id="nonTefap" editable="false" minWidth="-1.0" prefWidth="109.5" styleClass="numeric" text="Non-TEFAC CAC" />
+                        <TableColumn id="tefap" editable="false" minWidth="-1.0" prefWidth="43.0" styleClass="numeric" text="TEFAP" />
+                        <TableColumn id="secondHarvest" editable="false" minWidth="-1.0" prefWidth="84.0" styleClass="numeric" text="2nd Harvest" />
+                        <TableColumn id="secondHarvestProduce" editable="false" minWidth="-1.0" prefWidth="128.0" styleClass="numeric" text="2nd Harvest Produce" />
+                        <TableColumn id="pantry" editable="false" minWidth="-1.0" prefWidth="99.0" styleClass="numeric" text="Pantry Purchase" />
+                        <TableColumn id="nonFood" editable="false" minWidth="-1.0" prefWidth="111.5" styleClass="numeric" text="Pantry Non-Food" />
+                        <TableColumn id="comment" editable="false" minWidth="-1.0" prefWidth="112.5" text="Comment" />
+                        <TableColumn id="nonFood" editable="false" minWidth="-1.0" prefWidth="70.0" styleClass="numeric" text="Non-Food" />
+                        <TableColumn id="milk" editable="false" minWidth="-1.0" prefWidth="44.0" styleClass="numeric" text="Milk" />
+                        <TableColumn id="produce" editable="false" minWidth="-1.0" prefWidth="98.0" styleClass="numeric" text="Pantry Produce" />
+                        <TableColumn id="donation" editable="false" minWidth="-1.0" prefWidth="60.0" text="Donation" />
+                        <TableColumn id="donorName" editable="false" minWidth="-1.0" prefWidth="150.5" text="Donor" />
+                        <TableColumn id="donorAddress" editable="false" minWidth="-1.0" prefWidth="172.0" text="Address" />
+                        <TableColumn id="donorEmail" editable="false" minWidth="-1.0" prefWidth="208.0" text="Email" />
+                    </columns>
+                     <StackPane.margin>
+                        <Insets />
+                     </StackPane.margin>
+                  </TableView>
+               </children>
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
+            </StackPane>
          </children>
       </VBox>
    </children>
