--- a/src/main/java/org/pantry/food/Visits.fxml
+++ b/src/main/java/org/pantry/food/Visits.fxml
@@ -3,11 +3,11 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
 <AnchorPane xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.pantry.food.controller.VisitsController">
@@ -21,17 +21,17 @@
             </Label>
             <HBox>
                <children>
-                  <Button fx:id="addBtn" id="addVisitBtn" focusTraversable="false" mnemonicParsing="false" styleClass="record-action" text="Add Visitor">
+                  <Button id="addVisitBtn" fx:id="addBtn" focusTraversable="false" mnemonicParsing="false" styleClass="record-action" text="Add Visitor">
                      <HBox.margin>
                         <Insets right="20.0" />
                      </HBox.margin>
                   </Button>
-                  <Button fx:id="editBtn" id="editVisitBtn" focusTraversable="false" mnemonicParsing="false" styleClass="record-action" text="Edit Visitor">
+                  <Button id="editVisitBtn" fx:id="editBtn" focusTraversable="false" mnemonicParsing="false" styleClass="record-action" text="Edit Visitor">
                      <HBox.margin>
                         <Insets right="20.0" />
                      </HBox.margin>
                   </Button>
-                  <Button fx:id="deleteBtn" id="deleteVisitBtn" focusTraversable="false" mnemonicParsing="false" styleClass="record-action" text="Deactivate Visitor">
+                  <Button id="deleteVisitBtn" fx:id="deleteBtn" focusTraversable="false" mnemonicParsing="false" styleClass="record-action" text="Deactivate Visitor">
                      <HBox.margin>
                         <Insets right="20.0" />
                      </HBox.margin>
@@ -41,29 +41,25 @@
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding>
             </HBox>
-            <ScrollPane fitToHeight="true" fitToWidth="true">
-               <content>
-                  <AnchorPane>
-                     <children>
-                        <TableView fx:id="dataTable" focusTraversable="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                          <columns>
-                            <TableColumn id="visitId" editable="false" minWidth="-1.0" prefWidth="55.5" styleClass="numeric" text="Visit ID" />
-                            <TableColumn id="householdId" editable="false" minWidth="-1.0" prefWidth="85.5" styleClass="numeric" text="Household ID" />
-                              <TableColumn id="newCustomer" editable="false" minWidth="-1.0" prefWidth="51.5" text="New?" />
-                              <TableColumn id="numberAdults" editable="false" minWidth="-1.0" prefWidth="72.0" styleClass="numeric" text="# Adults" />
-                              <TableColumn id="numberKids" editable="false" minWidth="-1.0" prefWidth="65.5" styleClass="numeric" text="# Kids" />
-                              <TableColumn id="numberSeniors" editable="false" minWidth="-1.0" prefWidth="72.0" styleClass="numeric" text="# Seniors" />
-                              <TableColumn id="workingIncome" editable="false" minWidth="-1.0" prefWidth="110.0" text="Working Income" />
-                              <TableColumn id="otherIncome" editable="false" minWidth="-1.0" prefWidth="91.5" text="Other Income" />
-                              <TableColumn id="noIncome" editable="false" minWidth="-1.0" prefWidth="77.5" text="No Income" />
-                              <TableColumn id="visitDate" editable="false" minWidth="-1.0" prefWidth="119.5" text="Date" />
-                              <TableColumn id="visitorWeekNumber" editable="false" minWidth="-1.0" styleClass="numeric" text="Week #" />
-                          </columns>
-                        </TableView>
-                     </children>
-                  </AnchorPane>
-               </content>
-            </ScrollPane>
+            <StackPane prefWidth="500.0">
+               <children>
+                  <TableView fx:id="dataTable" focusTraversable="false">
+                    <columns>
+                      <TableColumn id="visitId" editable="false" minWidth="-1.0" prefWidth="55.5" styleClass="numeric" text="Visit ID" />
+                      <TableColumn id="householdId" editable="false" minWidth="-1.0" prefWidth="85.5" styleClass="numeric" text="Household ID" />
+                        <TableColumn id="newCustomer" editable="false" minWidth="-1.0" prefWidth="51.5" text="New?" />
+                        <TableColumn id="numberAdults" editable="false" minWidth="-1.0" prefWidth="72.0" styleClass="numeric" text="# Adults" />
+                        <TableColumn id="numberKids" editable="false" minWidth="-1.0" prefWidth="65.5" styleClass="numeric" text="# Kids" />
+                        <TableColumn id="numberSeniors" editable="false" minWidth="-1.0" prefWidth="72.0" styleClass="numeric" text="# Seniors" />
+                        <TableColumn id="workingIncome" editable="false" minWidth="-1.0" prefWidth="110.0" text="Working Income" />
+                        <TableColumn id="otherIncome" editable="false" minWidth="-1.0" prefWidth="91.5" text="Other Income" />
+                        <TableColumn id="noIncome" editable="false" minWidth="-1.0" prefWidth="77.5" text="No Income" />
+                        <TableColumn id="visitDate" editable="false" minWidth="-1.0" prefWidth="119.5" text="Date" />
+                        <TableColumn id="visitorWeekNumber" editable="false" minWidth="-1.0" styleClass="numeric" text="Week #" />
+                    </columns>
+                  </TableView>
+               </children>
+            </StackPane>
          </children>
       </VBox>
    </children>
