Start of Add/Edit Food dialog

--- a/src/main/resources/styles/global.css
+++ b/src/main/resources/styles/global.css
@@ -48,7 +48,8 @@
 }
 
 /* Right-align table columns containing numbers */
-.table-column.numeric {
+.table-column.numeric,
+.textfield.numeric {
 	-fx-alignment: CENTER-RIGHT;
 }
 
