--- a/src/main/java/org/pantry/food/ui/dialog/AddEditFoodDialog.fxml
+++ b/src/main/java/org/pantry/food/ui/dialog/AddEditFoodDialog.fxml
@@ -3,7 +3,6 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -13,120 +12,68 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.pantry.food.ui.dialog.AddEditVisitDialogController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.pantry.food.ui.dialog.AddEditVisitDialogController">
    <children>
-      <VBox prefHeight="300.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <GridPane hgap="20.0" prefHeight="371.0" prefWidth="600.0" vgap="10.0">
+            <GridPane hgap="10.0" prefHeight="223.0" prefWidth="380.0" vgap="10.0">
               <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="239.0" minWidth="10.0" prefWidth="217.5" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="190.0" minWidth="10.0" prefWidth="190.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="132.0" minWidth="10.0" prefWidth="130.5" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="239.0" minWidth="10.0" prefWidth="125.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="190.0" minWidth="10.0" prefWidth="66.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="196.0" minWidth="10.0" prefWidth="147.5" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="190.0" minWidth="10.0" prefWidth="67.0" />
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <GridPane>
-                    <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="135.5" minWidth="10.0" prefWidth="111.5" />
-                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="169.5" minWidth="10.0" prefWidth="168.5" />
-                    </columnConstraints>
-                    <rowConstraints>
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                    </rowConstraints>
-                     <children>
-                        <Label text="Household ID" />
-                        <ComboBox id="householdId" fx:id="householdIdCbo" editable="true" promptText="Select..." GridPane.columnIndex="1" />
-                     </children>
-                  </GridPane>
-                  <CheckBox id="newCustomer" fx:id="newChk" mnemonicParsing="false" text="New?" GridPane.columnIndex="1">
+                  <TextField fx:id="pickNSaveText" styleClass="numeric" GridPane.columnIndex="1" />
+                  <Label text="Pick 'n' Save" />
+                  <Label text="Community" GridPane.columnIndex="2">
                      <GridPane.margin>
-                        <Insets left="15.0" />
+                        <Insets left="20.0" />
                      </GridPane.margin>
-                  </CheckBox>
-                  <GridPane prefWidth="539.0" GridPane.rowIndex="1">
-                    <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                    </columnConstraints>
-                    <rowConstraints>
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                    </rowConstraints>
-                     <children>
-                        <Label text="# Adults" GridPane.halignment="RIGHT">
-                           <padding>
-                              <Insets right="10.0" />
-                           </padding>
-                        </Label>
-                        <TextField id="numberAdults" fx:id="numAdultsText" GridPane.columnIndex="1" />
-                     </children>
-                  </GridPane>
-                  <GridPane GridPane.columnIndex="1" GridPane.rowIndex="1">
-                     <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="135.0" minWidth="10.0" prefWidth="74.5" />
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="181.0" minWidth="10.0" prefWidth="105.5" />
-                     </columnConstraints>
-                     <rowConstraints>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                     </rowConstraints>
-                     <children>
-                        <Label text="# Children" GridPane.halignment="RIGHT">
-                           <padding>
-                              <Insets right="10.0" />
-                           </padding>
-                        </Label>
-                        <TextField id="numberKids" fx:id="numKidsText" GridPane.columnIndex="1" />
-                     </children>
-                  </GridPane>
-                  <GridPane GridPane.columnIndex="2" GridPane.rowIndex="1">
-                    <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                    </columnConstraints>
-                    <rowConstraints>
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                    </rowConstraints>
-                     <children>
-                        <Label text="# Seniors" GridPane.halignment="RIGHT">
-                           <padding>
-                              <Insets right="10.0" />
-                           </padding>
-                        </Label>
-                        <TextField id="numberSeniors" fx:id="numSeniorsText" GridPane.columnIndex="1" />
-                     </children>
-                  </GridPane>
-                  <CheckBox id="workingIncome" fx:id="workingIncomeChk" mnemonicParsing="false" text="Working Income" GridPane.halignment="RIGHT" GridPane.rowIndex="2" />
-                  <CheckBox id="otherIncome" fx:id="otherIncomeChk" mnemonicParsing="false" text="Other Income" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                  </Label>
+                  <TextField fx:id="communityText" styleClass="numeric" GridPane.columnIndex="3" />
+                  <Label text="Non-TEFAP" GridPane.rowIndex="1" />
+                  <TextField fx:id="nonTefapText" styleClass="numeric" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <Label text="TEFAP" GridPane.columnIndex="2" GridPane.rowIndex="1">
                      <GridPane.margin>
-                        <Insets left="15.0" />
+                        <Insets left="20.0" />
                      </GridPane.margin>
-                  </CheckBox>
-                  <CheckBox id="noIncome" fx:id="noIncomeChk" mnemonicParsing="false" text="No Income" GridPane.columnIndex="2" GridPane.rowIndex="2">
+                  </Label>
+                  <TextField fx:id="tefapText" styleClass="numeric" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+                  <Label text="2nd Harvest" GridPane.rowIndex="2" />
+                  <TextField fx:id="secondHarvestText" styleClass="numeric" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <Label text="2nd Harvest Produce" GridPane.columnIndex="2" GridPane.rowIndex="2">
                      <GridPane.margin>
-                        <Insets left="10.0" />
+                        <Insets left="20.0" />
                      </GridPane.margin>
-                  </CheckBox>
-                  <GridPane GridPane.rowIndex="3">
-                    <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                    </columnConstraints>
-                    <rowConstraints>
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                    </rowConstraints>
-                     <children>
-                        <Label text="Date" GridPane.halignment="RIGHT">
-                           <GridPane.margin>
-                              <Insets right="10.0" />
-                           </GridPane.margin>
-                        </Label>
-                        <TextField id="visitDate" fx:id="visitDateText" GridPane.columnIndex="1" />
-                     </children>
-                  </GridPane>
+                  </Label>
+                  <TextField fx:id="secondHarvestProduceText" styleClass="numeric" GridPane.columnIndex="3" GridPane.rowIndex="2" />
+                  <Label text="Pantry" GridPane.rowIndex="3" />
+                  <TextField fx:id="pantryText" styleClass="numeric" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                  <Label text="Pantry Non-Food" GridPane.rowIndex="4" />
+                  <TextField fx:id="pantryNonFoodText" styleClass="numeric" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                  <Label text="Non-Food" GridPane.columnIndex="2" GridPane.rowIndex="4">
+                     <GridPane.margin>
+                        <Insets left="20.0" />
+                     </GridPane.margin>
+                  </Label>
+                  <TextField fx:id="nonFoodText" styleClass="numeric" GridPane.columnIndex="3" GridPane.rowIndex="4" />
+                  <Label text="Milk" GridPane.rowIndex="5" />
+                  <TextField fx:id="milkText" styleClass="numeric" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                  <Label text="Produce" GridPane.columnIndex="2" GridPane.rowIndex="5">
+                     <GridPane.margin>
+                        <Insets left="20.0" />
+                     </GridPane.margin>
+                  </Label>
+                  <TextField fx:id="produceText" styleClass="numeric" GridPane.columnIndex="3" GridPane.rowIndex="5" />
                </children>
                <VBox.margin>
                   <Insets />
@@ -135,6 +82,39 @@
                   <Insets bottom="20.0" />
                </padding>
             </GridPane>
+            <HBox prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <VBox prefHeight="200.0" prefWidth="100.0">
+                     <children>
+                        <Label text="Date">
+                           <VBox.margin>
+                              <Insets bottom="18.0" top="5.0" />
+                           </VBox.margin>
+                        </Label>
+                        <Label text="Comments">
+                           <VBox.margin>
+                              <Insets />
+                           </VBox.margin>
+                        </Label>
+                     </children>
+                  </VBox>
+                  <VBox HBox.hgrow="ALWAYS">
+                     <children>
+                        <TextField fx:id="dateText" maxWidth="90.0">
+                           <VBox.margin>
+                              <Insets bottom="10.0" />
+                           </VBox.margin>
+                        </TextField>
+                        <TextField fx:id="commentsText">
+                           <VBox.margin>
+                              <Insets bottom="10.0" />
+                           </VBox.margin>
+                        </TextField>
+                        <CheckBox fx:id="donationChk" mnemonicParsing="false" text="Check if donation" />
+                     </children>
+                  </VBox>
+               </children>
+            </HBox>
             <HBox alignment="CENTER_RIGHT" styleClass="dialog-action-container">
                <children>
                   <Button fx:id="saveBtn" defaultButton="true" mnemonicParsing="false" styleClass="save" text="Save" />
