--- a/src/main/java/org/pantry/food/ui/dialog/AddEditFoodDialog.fxml
+++ b/src/main/java/org/pantry/food/ui/dialog/AddEditFoodDialog.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -12,7 +13,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.pantry.food.ui.dialog.AddEditVisitDialogController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.pantry.food.ui.dialog.AddEditFoodDialogController">
    <children>
       <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -82,39 +83,47 @@
                   <Insets bottom="20.0" />
                </padding>
             </GridPane>
-            <HBox prefHeight="100.0" prefWidth="200.0">
+            <GridPane>
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="184.5" minWidth="10.0" prefWidth="121.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="286.5" minWidth="10.0" prefWidth="259.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
                <children>
-                  <VBox prefHeight="200.0" prefWidth="100.0">
-                     <children>
-                        <Label text="Date">
-                           <VBox.margin>
-                              <Insets bottom="18.0" top="5.0" />
-                           </VBox.margin>
-                        </Label>
-                        <Label text="Comments">
-                           <VBox.margin>
-                              <Insets />
-                           </VBox.margin>
-                        </Label>
-                     </children>
-                  </VBox>
-                  <VBox HBox.hgrow="ALWAYS">
-                     <children>
-                        <TextField fx:id="dateText" maxWidth="90.0">
-                           <VBox.margin>
-                              <Insets bottom="10.0" />
-                           </VBox.margin>
-                        </TextField>
-                        <TextField fx:id="commentsText">
-                           <VBox.margin>
-                              <Insets bottom="10.0" />
-                           </VBox.margin>
-                        </TextField>
-                        <CheckBox fx:id="donationChk" mnemonicParsing="false" text="Check if donation" />
-                     </children>
-                  </VBox>
+                  <Label text="Date" />
+                  <Label text="Comments" GridPane.rowIndex="1" />
+                  <TextField fx:id="dateText" maxWidth="90.0" GridPane.columnIndex="1" />
+                  <TextField fx:id="commentsText" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <CheckBox fx:id="donationChk" mnemonicParsing="false" text="Check if donation" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                </children>
-            </HBox>
+            </GridPane>
+            <GridPane fx:id="donationGrd" visible="false">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="185.5" minWidth="10.0" prefWidth="121.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="263.0" minWidth="10.0" prefWidth="259.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <Label text="Donor" />
+                  <Label text="Address" GridPane.rowIndex="1" />
+                  <Label text="Email" GridPane.rowIndex="2" />
+                  <ComboBox fx:id="donorCbo" editable="true" prefWidth="275.0" GridPane.columnIndex="1" />
+                  <TextField fx:id="donorAddressText" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <TextField fx:id="donorEmailText" visible="false" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <TextField fx:id="donorEmailText" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+               </children>
+               <VBox.margin>
+                  <Insets bottom="10.0" top="10.0" />
+               </VBox.margin>
+            </GridPane>
             <HBox alignment="CENTER_RIGHT" styleClass="dialog-action-container">
                <children>
                   <Button fx:id="saveBtn" defaultButton="true" mnemonicParsing="false" styleClass="save" text="Save" />
