Added Settings dialog and menu item. Refactored to use application.properties instead of JDesktop-specific resource maps. Added functionality to automatically refresh data views as settings are updated.

--- a/src/main/resources/styles/global.css
+++ b/src/main/resources/styles/global.css
@@ -101,3 +101,9 @@
 #deleteVolunteerBtn {
  	-fx-graphic: url(../icons/user_delete.png);
 }
+
+/* Heading labels in the Settings dialog */
+.settings-heading {
+	-fx-font-size: 120%;
+	-fx-font-weight: bold;
+}
