--- a/src/main/java/org/pantry/food/Reports.fxml
+++ b/src/main/java/org/pantry/food/Reports.fxml
@@ -29,6 +29,7 @@
               <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
@@ -51,8 +52,13 @@
                      </children>
                   </HBox>
                   <RadioButton id="food.weight" mnemonicParsing="false" text="Donated Food Weight Report" toggleGroup="$radios" GridPane.rowIndex="1" />
-                  <RadioButton id="volunteer.events" mnemonicParsing="false" text="Volunteer Events" toggleGroup="$radios" GridPane.rowIndex="2" />
-                  <RadioButton id="pantry.report" mnemonicParsing="false" text="Pantry Report Summary" toggleGroup="$radios" GridPane.rowIndex="3" />
+                  <RadioButton id="volunteer.events" mnemonicParsing="false" text="Volunteer Events" toggleGroup="$radios" GridPane.rowIndex="3" />
+                  <RadioButton id="volunteer.hours" mnemonicParsing="false" text="Volunteer Hours" GridPane.rowIndex="2">
+                     <toggleGroup>
+                        <ToggleGroup fx:id="radios1" />
+                     </toggleGroup>
+                  </RadioButton>
+                  <RadioButton id="pantry.report" mnemonicParsing="false" text="Pantry Report Summary" toggleGroup="$radios" GridPane.rowIndex="4" />
                </children>
                <VBox.margin>
                   <Insets left="20.0" />
@@ -63,14 +69,9 @@
             </GridPane>
             <HBox>
                <children>
-                  <Button id="saveReportBtn" fx:id="openBtn" focusTraversable="false" mnemonicParsing="false" styleClass="record-action" text="Open">
+                  <Button id="openReportBtn" fx:id="openBtn" focusTraversable="false" mnemonicParsing="false" styleClass="record-action" text="Open">
                      <HBox.margin>
-                        <Insets right="20.0" />
-                     </HBox.margin>
-                  </Button>
-                  <Button id="printReportBtn" fx:id="printBtn" focusTraversable="false" mnemonicParsing="false" styleClass="record-action" text="Print">
-                     <HBox.margin>
-                        <Insets right="20.0" />
+                        <Insets />
                      </HBox.margin>
                   </Button>
                </children>
