--- a/src/main/java/org/pantry/food/reports/ReportContainer.fxml
+++ b/src/main/java/org/pantry/food/reports/ReportContainer.fxml
@@ -5,34 +5,38 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-
-<AnchorPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.pantry.food.reports.GenericReportController">
+<StackPane xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.pantry.food.reports.GenericReportController">
    <children>
-      <BorderPane layoutX="200.0" layoutY="56.0" style="-fx-background-color: white; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.4), 10, 0, 0, 0);" AnchorPane.bottomAnchor="40.0" AnchorPane.leftAnchor="40.0" AnchorPane.rightAnchor="40.0" AnchorPane.topAnchor="40.0">
-         <top>
-            <VBox BorderPane.alignment="CENTER">
-               <children>
-                  <Label fx:id="titleLabel" styleClass="report-title" text="REPORT TITLE">
-                     <VBox.margin>
-                        <Insets />
-                     </VBox.margin>
-                  </Label>
-                  <Label fx:id="dateLabel" text="DATE">
-                     <VBox.margin>
-                        <Insets top="10.0" />
-                     </VBox.margin>
-                  </Label>
-               </children>
-               <BorderPane.margin>
-                  <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-               </BorderPane.margin>
-            </VBox>
-         </top>
-         <center>
-            <TableView fx:id="primaryTable" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" BorderPane.alignment="CENTER" />
-         </center>
-      </BorderPane>
+      <AnchorPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity">
+         <children>
+            <BorderPane layoutX="200.0" layoutY="56.0" style="-fx-background-color: white; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.4), 10, 0, 0, 0);" AnchorPane.bottomAnchor="40.0" AnchorPane.leftAnchor="40.0" AnchorPane.rightAnchor="40.0" AnchorPane.topAnchor="40.0">
+               <top>
+                  <VBox BorderPane.alignment="CENTER">
+                     <children>
+                        <Label fx:id="titleLabel" styleClass="report-title" text="REPORT TITLE">
+                           <VBox.margin>
+                              <Insets />
+                           </VBox.margin>
+                        </Label>
+                        <Label fx:id="dateLabel" text="DATE">
+                           <VBox.margin>
+                              <Insets top="10.0" />
+                           </VBox.margin>
+                        </Label>
+                     </children>
+                     <BorderPane.margin>
+                        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                     </BorderPane.margin>
+                  </VBox>
+               </top>
+               <center>
+                  <TableView fx:id="primaryTable" focusTraversable="false" minHeight="-Infinity" minWidth="600.0" prefHeight="400.0" styleClass="report-table" BorderPane.alignment="CENTER" />
+               </center>
+            </BorderPane>
+         </children>
+      </AnchorPane>
    </children>
-</AnchorPane>
+</StackPane>
