--- a/src/main/java/org/pantry/food/ui/dialog/AboutDialog.fxml
+++ b/src/main/java/org/pantry/food/ui/dialog/AboutDialog.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
-
+<?import javafx.scene.text.Font?>
 
 <Pane prefHeight="167.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.pantry.food.ui.dialog.AboutDialog">
    <children>
@@ -19,17 +19,12 @@
                   <Insets left="-10.0" right="10.0" top="-10.0" />
                </HBox.margin>
             </Label>
-            <VBox prefHeight="167.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
+            <VBox prefHeight="167.0" HBox.hgrow="ALWAYS">
                <children>
-                  <Label fx:id="titleLabel" text="McFarland Community Food Pantry">
-                     <VBox.margin>
-                        <Insets bottom="10.0" top="10.0" />
-                     </VBox.margin>
-                  </Label>
                   <GridPane>
                     <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="120.0" minWidth="10.0" prefWidth="68.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="175.0" />
                     </columnConstraints>
                     <rowConstraints>
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -37,13 +32,25 @@
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <Label text="Version:" />
-                        <Label text="Vendor:" GridPane.rowIndex="1" />
-                        <Label text="Support:" GridPane.rowIndex="2" />
+                        <Label text="Version:">
+                           <font>
+                              <Font name="System Bold" size="12.0" />
+                           </font></Label>
+                        <Label text="Vendor:" GridPane.rowIndex="1">
+                           <font>
+                              <Font name="System Bold" size="12.0" />
+                           </font></Label>
+                        <Label text="Support:" GridPane.rowIndex="2">
+                           <font>
+                              <Font name="System Bold" size="12.0" />
+                           </font></Label>
                         <Label fx:id="versionLabel" GridPane.columnIndex="1" />
                         <Label text="Dave Johnson" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                         <Label text="See Pantry Staff" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                      </children>
+                     <VBox.margin>
+                        <Insets left="20.0" top="20.0" />
+                     </VBox.margin>
                   </GridPane>
                </children>
             </VBox>
