--- a/src/main/java/org/pantry/food/ui/dialog/AddEditFoodDialog.fxml
+++ b/src/main/java/org/pantry/food/ui/dialog/AddEditFoodDialog.fxml
@@ -31,6 +31,7 @@
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
                   <TextField fx:id="pickNSaveText" styleClass="numeric" GridPane.columnIndex="1" />
@@ -67,14 +68,16 @@
                      </GridPane.margin>
                   </Label>
                   <TextField fx:id="nonFoodText" styleClass="numeric" GridPane.columnIndex="3" GridPane.rowIndex="4" />
-                  <Label text="Milk" GridPane.rowIndex="5" />
-                  <TextField fx:id="milkText" styleClass="numeric" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                  <Label text="Pantry Produce" GridPane.rowIndex="5" />
+                  <TextField fx:id="pantryProduceText" styleClass="numeric" GridPane.columnIndex="1" GridPane.rowIndex="5" />
                   <Label text="Produce" GridPane.columnIndex="2" GridPane.rowIndex="5">
                      <GridPane.margin>
                         <Insets left="20.0" />
                      </GridPane.margin>
                   </Label>
                   <TextField fx:id="produceText" styleClass="numeric" GridPane.columnIndex="3" GridPane.rowIndex="5" />
+                  <Label text="Milk" GridPane.rowIndex="6" />
+                  <TextField fx:id="milkText" styleClass="numeric" GridPane.columnIndex="1" GridPane.rowIndex="6" />
                </children>
                <VBox.margin>
                   <Insets />
