--- a/src/main/java/org/pantry/food/Volunteers.fxml
+++ b/src/main/java/org/pantry/food/Volunteers.fxml
@@ -7,6 +7,7 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
@@ -36,6 +37,12 @@
                         <Insets right="20.0" />
                      </HBox.margin>
                   </Button>
+                  <Region HBox.hgrow="ALWAYS" />
+                  <Label fx:id="recordCountLabel" alignment="CENTER_RIGHT" contentDisplay="RIGHT" focusTraversable="false" text="Records:" textAlignment="RIGHT">
+                     <HBox.margin>
+                        <Insets top="4.0" />
+                     </HBox.margin>
+                  </Label>
                </children>
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
